--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,7 +239,7 @@ ul.a {list-style-type: square;}
 
     /* Create three equal columns that floats next to each other */
     .column {
-      float: right;
+      float: left;
       padding: 10px;
       height: 600px; /* Should be removed. Only for demonstration */
     }
